# project_p3_risk_engine

./: README.md  l1_sandbox.py  main.py  mlflow.db  pyproject.toml
.github/workflows/: ci.yml  nightly.yml
config/: clinical_rules.yaml  pima_rules.yaml
data/processed/: clean_patients.csv  test_features.csv  train_features.csv
data/raw/: synthetic_data.csv
mlruns/1/models/m-241c5f0a7bc84251ab2faa57fb8fdcfb/artifacts/: MLmodel  conda.yaml  model.pkl
models/artifacts/: fairness_metrics.json  false_negatives.csv  feature_pipeline.joblib  logistic_regression.joblib  random_forest.joblib  random_forest_balanced_v1.0.0.joblib  rf_balanced_production_bundle_v1.0.0.joblib  shap_local_explanations.json  threshold_config.json
src/cli/: __init__.py  risk_engine.py
src/data/: confidence_scorer.py  generator.py  validator.py
src/explainability/: __init__.py  fairness_analyzer.py  shap_explainer.py
src/features/: feature_engineer.py
src/models/: __init__.py  error_analyzer.py  evaluator.py  model_store.py  pima_trainer.py  threshold_tuner.py  trainer.py  trainer_compare.py
src/pipeline/: __init__.py  processor.py
src/project_p3_risk_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: config_loader.py  logger.py  test_logger.py
tests/: test_cli.py  test_confidence_scorer.py  test_evaluator.py  test_fairness_analyzer.py  test_feature_engineer.py  test_model_store.py  test_processor.py  test_shap_explainer.py  test_threshold_tuner.py  test_trainer.py  test_validator.py
(+6 files in other folders)
