[project]
name = "project-p3-risk-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mlflow>=3.11.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
    "typer>=0.24.1",
]
